# craftingjackblack

./: .gitignore
documents/proposal/: proposal.tex
src/: README.md  agent.py  deepqlearningagent.py  doubleqlearningagent.py  graph.py  main.py  ppoagent.py  pyproject.toml  qlearningagent.py  sarsaagent.py
src/output/DeepQLearning/: errors.csv  errors_avg.csv
